argo_deploy/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-vue-dep
  annotations:
    argocd.argoproj.io/sync-wave: "4"  # 배포 순서: 4 (Backend 준비 후)
spec:
  selector:
    matchLabels:
      app: vuedep
  replicas: 1
  template:
    metadata:
      labels:
        app: vuedep
    spec:
      containers:
      - name: vue-container
        image: kang92/jen_19_vue:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80      # 5173이 아니라 80으로 바꿔야 한다.
